# keep_windows_mobile_hotspot_on

./: main.py  pyproject.toml
app/hotspot/: mobile_hotspot.py
app/services/: service.py  test_service.py
