[tool.poetry]
name = "keep_mobile_hotspot_working"
version = "0.1.0"
description = ""
authors = ["serranomorante <serranomorantepatricio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.53"
pytest = "^7.1.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
